# Be.-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 80ac12bd5c83_initial_schema.py
backend/app/: assign_dedicated_staff.py  main.py  seed.py  seed_from_excel.py
backend/app/api/: ai_analyses.py  audit_logs.py  auth.py  daily_reports.py  dashboard.py  goals.py  risks.py  scores.py  staff_reports.py  support_plans.py  system_settings.py  users.py
backend/app/core/: bootstrap.py  config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  ai.py  audit.py  goal.py  plan.py  report.py  risk.py  score.py  setting.py  user.py
backend/app/prompts/: daily_analysis_prompt.md  risk_review_prompt.md  staff_recommendation_prompt.md  support_plan_prompt.md  user_recommendation_prompt.md
backend/app/schemas/: ai.py  auth.py  misc.py  plan.py  report.py  user.py
backend/app/services/: audit.py  risk.py  scoring.py
backend/app/services/ai/: base.py  context.py  factory.py  gemini.py  mock.py
backend/tests/: conftest.py  test_ai_mock.py  test_auth.py  test_permissions.py  test_plans.py  test_reports.py  test_risk.py  test_scoring.py
docs/: api-design.md  database-design.md  deploy.md  handoff.md  implementation-plan.md  scoring-rules.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: components.test.tsx  (+3 more)
(+31 files in other folders)
