[project]
name = "becolorful-backend"
version = "0.1.0"
description = "Be.カラフル Well-being個別支援AI バックエンド"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
